# game_of_life

./: .gitignore  CMakeLists.txt  README.md  arena.c  arena.h  board_drawer.c  cell.c  cell.h  game.c  life  life.c  main  main.c
.github/workflows/: ccpp.yml
console/: CMakeLists.txt  board_drawer.c  board_drawer.h
doxygen/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  board__drawer_8c.html  board__drawer_8c.js  board__drawer_8c_source.html  console_2_c_make_lists_8txt.html  console_2board__drawer_8h.html  console_2board__drawer_8h.js  console_2board__drawer_8h_source.html  dir_07afc9bb9f7aa6cca4bd82f0000ce85f.html  dir_07afc9bb9f7aa6cca4bd82f0000ce85f.js  dir_0a3bad56e46b57842bee255cbe063c0c.html  dir_0a3bad56e46b57842bee255cbe063c0c.js  dir_41848f98a18a219562a99f59c7ed2682.html  dir_41848f98a18a219562a99f59c7ed2682.js  dir_72f425a956db4d11b6200e1162a0a407.html  dir_72f425a956db4d11b6200e1162a0a407.js  dir_7b91c19a9bf7886860161715246bcea7.html  dir_7b91c19a9bf7886860161715246bcea7.js  dir_88c48fccce7a6b6622455539eadb1036.html  dir_88c48fccce7a6b6622455539eadb1036.js  files.html  files_dup.js  game_2_c_make_lists_8txt.html  game_2game_8h.html  game_2game_8h.js  game_2game_8h_source.html  game_8c.html  game_8c.js  game_8c_source.html  globals.html  globals_defs.html  globals_func.html  include_2board__drawer_8h.html  include_2board__drawer_8h.js  include_2board__drawer_8h_source.html  (+24 more)
game/: CMakeLists.txt  game.c  game.h
include/: board_drawer.h  game.h  sdl.h
sdl/: CMakeLists.txt  Makefile  sdl  sdl.c  sdl.h
unitTests/: a.out  test  test.c
(+76 files in other folders)
